# mcp-governance-orchestrator

./: .gitignore  CLAUDE.md  HANDOFF_NEXT_SESSION.md  README.md  autonomous_factory_cycle.json  capability_effectiveness_ledger.json  cycle_history_runtime.py  demo_capability_gate_policy.json  demo_seed_history.json  demo_seed_summary.json  factory_pipeline.py  factory_runtime.py  governed_runtime.py  orchestrator_helper.py  planner_runtime.py  policy_test.json  portfolio_governance_runtime.py  portfolio_repos_example.json  portfolio_state_stage1_github.json  pyproject.toml  sweep_artifact_heavy_envelope_run43.json  sweep_artifact_heavy_experiment_results.json  sweep_artifact_heavy_policy.json  sweep_balanced_envelope_run25.json  sweep_balanced_experiment_results.json  sweep_balanced_policy.json  sweep_determinism_heavy_envelope_run47.json  sweep_determinism_heavy_experiment_results.json  sweep_determinism_heavy_policy.json  sweep_failure_reduction_envelope_run39.json  sweep_failure_reduction_experiment_results.json  sweep_failure_reduction_policy.json  tier3_portfolio_dashboard.html  tier3_portfolio_dashboard_filtered.html  tier3_portfolio_dashboard_interactive.html  tier3_portfolio_dashboard_styled.html  tier3_portfolio_report.csv
.claude/: session_log.template.md  settings.json
agent_tasks/: artifact_audit_example.py  build_mcp_server_example.py  build_portfolio_dashboard.py  failure_recovery_example.py  health_probe_example.py  planner_determinism_example.py  registry.py  repo_insights_example.py
builder/: __init__.py  agent_adapter_builder.py  artifact_registry.py  data_connector_builder.py  mcp_builder.py  result_contract.py  slack_adapter_builder.py  spec_builder_support.py  template_renderer.py  (+1 more)
docs/: AEP.md  (+12 more)
templates/guardian_skeleton/: LICENSE  README.md  orchestrator_helper.py  pyproject.toml
templates/guardian_skeleton/.github/ISSUE_TEMPLATE/: bug_report.yml
templates/guardian_skeleton/.github/workflows/: ci.yml
templates/guardian_skeleton/docs/: DETERMINISM_NOTES.md  EXAMPLE_OUTPUTS.md
templates/guardian_skeleton/src/mcp_governance_orchestrator/: server.py
(+455 files in other folders)
