[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-governance-orchestrator"
version = "0.2.3"
description = "Deterministic MCP server for validating repository policy governance artifacts"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

authors = [
  { name = "Curtis D. Williams" }
]

dependencies = [
  "fastmcp>=2.0.0",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/curtis-d-williams/mcp-governance-orchestrator"
Repository = "https://github.com/curtis-d-williams/mcp-governance-orchestrator"
Issues = "https://github.com/curtis-d-williams/mcp-governance-orchestrator/issues"

[project.scripts]
mcp-governance-orchestrator = "mcp_governance_orchestrator.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_governance_orchestrator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.optional-dependencies]
release_guardian = ["mcp-release-guardian==0.1.4"]
